--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -17,7 +17,6 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -25,28 +24,30 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: "18"
+          
+      # Ye step zaroori hai taake hum sahi folder me ja kar install karein
+      - name: Install Dependencies
+        working-directory: ./phase-II/frontend
+        run: npm ci
 
-      - name: Install dependencies
-        working-directory: phase-II/frontend
-        run: npm install
-
-      - name: Build Next.js
-        working-directory: phase-II/frontend
+      # Build bhi usi folder me hoga
+      - name: Build with Next.js
+        working-directory: ./phase-II/frontend
         run: npm run build
 
+      # Artifact upload karte waqt sahi path batana zaroori hai
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: phase-II/frontend/out
+          path: ./phase-II/frontend/out
 
   deploy:
-    needs: build
-    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
+    runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
