--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,4 +1,4 @@
-name: Deploy Next.js to GitHub Pages
+name: Deploy Next.js Phase-II
 
 on:
   push:
@@ -25,21 +25,21 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "18"
-          
-      # Ye step zaroori hai taake hum sahi folder me ja kar install karein
+
+      # Error yahan aa raha tha, humne detect step hata diya
+      # Aur seedha folder bata kar install kiya
       - name: Install Dependencies
         working-directory: ./phase-II/frontend
         run: npm ci
 
-      # Build bhi usi folder me hoga
-      - name: Build with Next.js
+      - name: Build
         working-directory: ./phase-II/frontend
         run: npm run build
 
-      # Artifact upload karte waqt sahi path batana zaroori hai
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
+          # Ye path sabse important hai
           path: ./phase-II/frontend/out
 
   deploy:
