--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.11",
+    "@types/uuid": "^10.0.0",
     "better-auth": "^1.0.0",
     "js-cookie": "^3.0.5",
     "next": "^16.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-chatbotify": "^2.5.0",
+    "react-dom": "^19.0.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
